[gd_scene load_steps=7 format=3 uid="uid://dm0utrwoolny0"]

[ext_resource type="Script" path="res://Menu/cityMenu/city_menu.gd" id="1_87upo"]
[ext_resource type="Texture2D" uid="uid://c4hob60wylmth" path="res://Menu/cityMenu/IMAGE#1d695e40-d3d3-4b5c-bb0c-c25d5cf7c728.png" id="2_xy66r"]
[ext_resource type="AudioStream" uid="uid://devevnfbjc3" path="res://Menu/cityMenu/Full game.mp3" id="3_ltlen"]
[ext_resource type="Shader" path="res://world/World.gdshader" id="4_sgyay"]
[ext_resource type="Theme" uid="uid://bj26sok85x2wd" path="res://Menu/cityMenu/menu_theme.tres" id="5_3fapw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_135oc"]
shader = ExtResource("4_sgyay")
shader_parameter/projector_power = 0.047
shader_parameter/vignette_param = 4.742

[node name="cityMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_87upo")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xy66r")
expand_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(1.66667, 1.40625)
texture = ExtResource("2_xy66r")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ltlen")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_135oc")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Shop" type="Button" parent="."]
layout_mode = 2
offset_left = 72.0
offset_top = 872.0
offset_right = 720.0
offset_bottom = 1055.0
theme = ExtResource("5_3fapw")
text = "Shop"

[node name="Play" type="Button" parent="."]
layout_mode = 2
offset_left = 1224.0
offset_top = 880.0
offset_right = 1919.0
offset_bottom = 1063.0
theme = ExtResource("5_3fapw")
text = "Play"
icon_alignment = 1

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 1800.0
offset_top = 24.0
offset_right = 1912.0
offset_bottom = 112.0
text = "Exit"

[connection signal="pressed" from="Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
